keep track of the already inert elements

--- a/blocking-elements.html
+++ b/blocking-elements.html
@@ -96,6 +96,14 @@
     })();
   </script>
 
+
+  <input inert placeholder="inert input">
+
+  <x-trap-focus inert>
+    inert x-trap-focus
+  </x-trap-focus>
+
+
   <h2>x-trap-focus</h2>
   <x-trap-focus>
     <input placeholder="in body">
@@ -159,9 +167,6 @@
       <input placeholder="x-trap-focus in body">
     </x-trap-focus>
   </x-b>
-
-
-
 
   <h2>Lots of focusable elements</h2>
   <script>
