--- a/blocking-elements.html
+++ b/blocking-elements.html
@@ -16,8 +16,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
-  <!-- import customElements polyfill -->
-  <script src="node_modules/webcomponents.js/src/CustomElements/v1/CustomElements.js"></script>
+  <script src="node_modules/webcomponents.js/webcomponents-lite.js"></script>
 </head>
 
 <body>
