--- a/demo/custom-elements.html
+++ b/demo/custom-elements.html
@@ -16,8 +16,8 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
-  <script src="node_modules/webcomponents.js/webcomponents-lite.js"></script>
-  <script src="blocking-elements.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../blocking-elements.html">
 </head>
 
 <body>
@@ -30,9 +30,13 @@ limitations under the License.
         padding: 5px;
         margin: 5px;
       }
+      label {
+        display: block;
+        margin-bottom: 5px;
+      }
     </style>
-    <label>Trap
-      <input id="toggle" type="checkbox">
+    <label>
+      <input id="toggle" type="checkbox"> Make blocking element
     </label>
     <slot id="xtrapfocus"></slot>
   </template>
@@ -194,7 +198,7 @@ limitations under the License.
     }
   </script>
 
-  <script src="node_modules/inert/inert.js"></script>
+  <script src="../../inert/inert.js"></script>
 </body>
 
 </html>
