--- a/test/index.html
+++ b/test/index.html
@@ -1,76 +1,25 @@
-<!--
-Copyright 2016 Google Inc. All Rights Reserved.
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-    http://www.apache.org/licenses/LICENSE-2.0
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><!--
+@license
+Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
+This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
+The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
+The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
+Code distributed by Google as part of the polymer project is also
+subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
+--><html><head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Tests</title>
-  <link href="../node_modules/mocha/mocha.css" rel="stylesheet" />
-  <script src="../node_modules/mocha/mocha.js"></script>
-  <script src="../node_modules/chai/chai.js"></script>
-  <script src="helpers/fixture.js"></script>
-  <script src="../node_modules/webcomponents.js/webcomponents-lite.js"></script>
-  <!-- The script under test -->
-  <script src="../blocking-elements.js"></script>
-</head>
+    <meta charset="utf-8">
+    <title>Tests</title>
+    <script src="../../web-component-tester/browser.js"></script>
 
-<body>
+  </head>
+  <body>
 
-  <!-- A container element for the visual Mocha results -->
-  <div id="mocha"></div>
+    <script>
+      WCT.loadSuites([
+        'basic.html',
+        'shadow.html'
+      ]);
+    </script>
 
-  <!-- Mocha setup and initiation code -->
-  <script>
-    mocha.setup('bdd');
-    window.onload = function() {
-      var runner = mocha.run();
-      var failedTests = [];
-
-      runner.on('end', function() {
-        window.mochaResults = runner.stats;
-        window.mochaResults.reports = failedTests;
-      });
-
-      runner.on('fail', logFailure);
-
-      function logFailure(test, err){
-        var flattenTitles = function(test){
-          var titles = [];
-          while (test.parent.title){
-            titles.push(test.parent.title);
-            test = test.parent;
-          }
-          return titles.reverse();
-        };
-
-        failedTests.push({
-          name: test.title,
-          result: false,
-          message: err.message,
-          stack: err.stack,
-          titles: flattenTitles(test)
-        });
-      };
-    };
-    mocha.checkLeaks(); // Check for global variable leaks
-  </script>
-
-  <!-- Load inert polyfill -->
-  <script src="../node_modules/inert/inert.js"></script>
-  <!-- Tests -->
-  <script src="index.js"></script>
-
-</body>
-
-</html>
+</body></html>
