--- a/demo/index.html
+++ b/demo/index.html
@@ -85,7 +85,8 @@ limitations under the License.
     Check these other demos:
     <ul>
       <li><a href="nytimes.html">lots of content</a></li>
-      <li><a href="custom-elements.html">with Custom Elements</a></li>
+      <li><a href="ce-v0.html">with Custom Elements (ShadowDom v0)</a></li>
+      <li><a href="ce-v1.html">with Custom Elements (ShadowDom v1)</a></li>
     </ul>
 
   </p>
