--- a/test/shadow.html
+++ b/test/shadow.html
@@ -55,6 +55,52 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     }
 
+    suite('ShdowDom v0', function() {
+      if (!Element.prototype.createShadowRoot) {
+        console.log('ShadowDOM v0 is not supported by the browser.');
+        return;
+      }
+
+      let container;
+
+      setup(function() {
+        container = fixture('basic');
+        const template = document.querySelector('template#shadow-v0');
+
+        // Clone template and add it to shadow root.
+        const clone = document.importNode(template.content, true);
+        container.createShadowRoot().appendChild(clone);
+      });
+
+      teardown(function() {
+        emptyBlockingElements();
+      });
+
+      test('update elements in shadow dom', function() {
+        const shadowBtn = container.shadowRoot.querySelector('button');
+
+        // Distributed element as a blocking element.
+        document.$blockingElements.push(container.children[0]);
+        assert.equal(document.$blockingElements.all.length, 1);
+        assert.equal(document.$blockingElements.top, container.children[0]);
+        assert.equal(shadowBtn.inert, true, 'button in shadow dom inert');
+        assert.notEqual(container.children[0].inert, true, '1st child active');
+        assert.equal(container.children[1].inert, true, '2nd child inert');
+        assert.equal(container.children[2].inert, true, '3rd child inert');
+
+        // Button in shadow dom as a blocking element, its siblings should be inert
+        document.$blockingElements.push(shadowBtn);
+        assert.equal(document.$blockingElements.all.length, 2);
+        assert.equal(document.$blockingElements.top, shadowBtn);
+        assert.notEqual(shadowBtn.inert, true, 'button in shadow dom active');
+        assert.equal(shadowBtn.nextElementSibling.inert, true, 'button sibling (slot) inert');
+        assert.notEqual(container.children[0].inert, true, '1st child inert restored');
+        assert.notEqual(container.children[1].inert, true, '2nd child inert restored');
+        assert.notEqual(container.children[2].inert, true, '3rd child inert restored');
+      });
+
+    });
+
     suite('ShdowDom v1', function() {
       if (!Element.prototype.attachShadow) {
         console.log('ShadowDOM v1 is not supported by the browser.');
