--- a/demo/ce-v0.html
+++ b/demo/ce-v0.html
@@ -18,6 +18,7 @@ limitations under the License.
   <title>blockingElements polyfill test page</title>
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../blocking-elements.html">
+  <link rel="import" href="logger.html">
 </head>
 
 <body>
@@ -98,10 +99,7 @@ limitations under the License.
 
         _toggleTrap(evt) {
           this.classList[evt.target.checked ? 'add' : 'remove']('blocking');
-          const method = evt.target.checked ? 'push' : 'remove';
-          console.time(method);
-          document.$blockingElements[method](this);
-          console.timeEnd(method);
+          document.$blockingElements[evt.target.checked ? 'push' : 'remove'](this);
         }
       }
       customElements.define('x-trap-focus', XTrapFocus);
@@ -133,16 +131,16 @@ limitations under the License.
 
 
   <h2>x-trap-focus</h2>
-  <x-trap-focus>
+  <x-trap-focus id="simple">
     <input placeholder="in body">
   </x-trap-focus>
 
   <p>
     nested
   </p>
-  <x-trap-focus>
+  <x-trap-focus id="nested-outer">
     <input placeholder="in body">
-    <x-trap-focus>
+    <x-trap-focus id="nested-inner">
       <input placeholder="in body">
     </x-trap-focus>
   </x-trap-focus>
@@ -166,7 +164,7 @@ limitations under the License.
   </p>
   <x-a>
     <input>
-    <x-trap-focus>
+    <x-trap-focus id="nested-in-xa">
       <input placeholder="in body">
     </x-trap-focus>
   </x-a>
@@ -191,7 +189,7 @@ limitations under the License.
   </p>
   <x-b>
     <input placeholder="in body">
-    <x-trap-focus>
+    <x-trap-focus id="nested-in-xb">
       <input placeholder="x-trap-focus in body">
     </x-trap-focus>
   </x-b>
