--- a/demo/nytimes.html
+++ b/demo/nytimes.html
@@ -18,6 +18,7 @@ limitations under the License.
   <title>blockingElements polyfill test page</title>
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../blocking-elements.html">
+  <link rel="import" href="logger.html">
 
   <style>
     .container {
@@ -52,10 +53,7 @@ limitations under the License.
       }
       var checked = target.checked;
       container.classList[checked ? 'add' : 'remove']('blocking');
-      const method = checked ? 'push' : 'remove';
-      console.time(method);
-      document.$blockingElements[method](container);
-      console.timeEnd(method);
+      document.$blockingElements[evt.target.checked ? 'push' : 'remove'](container);
     }
   </script>
 
