--- a/test/shadow.html
+++ b/test/shadow.html
@@ -55,7 +55,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     }
 
-    suite('ShdowDom v0', function() {
+    suite('ShadowDom v0', function() {
       if (!Element.prototype.createShadowRoot) {
         console.log('ShadowDOM v0 is not supported by the browser.');
         return;
@@ -83,25 +83,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         document.$blockingElements.push(container.children[0]);
         assert.equal(document.$blockingElements.all.length, 1);
         assert.equal(document.$blockingElements.top, container.children[0]);
-        assert.equal(shadowBtn.inert, true, 'button in shadow dom inert');
-        assert.notEqual(container.children[0].inert, true, '1st child active');
-        assert.equal(container.children[1].inert, true, '2nd child inert');
-        assert.equal(container.children[2].inert, true, '3rd child inert');
+        assert.isTrue(shadowBtn.hasAttribute('inert'), 'button in shadow dom inert');
+        assert.isFalse(container.children[0].hasAttribute('inert'), '1st child active');
+        assert.isTrue(container.children[1].hasAttribute('inert'), '2nd child inert');
+        assert.isTrue(container.children[2].hasAttribute('inert'), '3rd child inert');
 
         // Button in shadow dom as a blocking element, its siblings should be inert
         document.$blockingElements.push(shadowBtn);
         assert.equal(document.$blockingElements.all.length, 2);
         assert.equal(document.$blockingElements.top, shadowBtn);
-        assert.notEqual(shadowBtn.inert, true, 'button in shadow dom active');
-        assert.equal(shadowBtn.nextElementSibling.inert, true, 'button sibling (slot) inert');
-        assert.notEqual(container.children[0].inert, true, '1st child inert restored');
-        assert.notEqual(container.children[1].inert, true, '2nd child inert restored');
-        assert.notEqual(container.children[2].inert, true, '3rd child inert restored');
+        assert.isFalse(shadowBtn.hasAttribute('inert'), 'button in shadow dom active');
+        assert.isTrue(shadowBtn.nextElementSibling.hasAttribute('inert'), 'button sibling (slot) inert');
+        assert.isFalse(container.children[0].hasAttribute('inert'), '1st child inert restored');
+        assert.isFalse(container.children[1].hasAttribute('inert'), '2nd child inert restored');
+        assert.isFalse(container.children[2].hasAttribute('inert'), '3rd child inert restored');
       });
 
     });
 
-    suite('ShdowDom v1', function() {
+    suite('ShadowDom v1', function() {
       if (!Element.prototype.attachShadow) {
         console.log('ShadowDOM v1 is not supported by the browser.');
         return;
@@ -131,20 +131,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         document.$blockingElements.push(container.children[0]);
         assert.equal(document.$blockingElements.all.length, 1);
         assert.equal(document.$blockingElements.top, container.children[0]);
-        assert.equal(shadowBtn.inert, true, 'button in shadow dom inert');
-        assert.notEqual(container.children[0].inert, true, '1st child active');
-        assert.equal(container.children[1].inert, true, '2nd child inert');
-        assert.equal(container.children[2].inert, true, '3rd child inert');
+        assert.isTrue(shadowBtn.hasAttribute('inert'), 'button in shadow dom inert');
+        assert.isFalse(container.children[0].hasAttribute('inert'), '1st child active');
+        assert.isTrue(container.children[1].hasAttribute('inert'), '2nd child inert');
+        assert.isTrue(container.children[2].hasAttribute('inert'), '3rd child inert');
 
         // Button in shadow dom as a blocking element, its siblings should be inert
         document.$blockingElements.push(shadowBtn);
         assert.equal(document.$blockingElements.all.length, 2);
         assert.equal(document.$blockingElements.top, shadowBtn);
-        assert.notEqual(shadowBtn.inert, true, 'button in shadow dom active');
-        assert.equal(shadowBtn.nextElementSibling.inert, true, 'button sibling (slot) inert');
-        assert.notEqual(container.children[0].inert, true, '1st child inert restored');
-        assert.notEqual(container.children[1].inert, true, '2nd child inert restored');
-        assert.notEqual(container.children[2].inert, true, '3rd child inert restored');
+        assert.isFalse(shadowBtn.hasAttribute('inert'), 'button in shadow dom active');
+        assert.isTrue(shadowBtn.nextElementSibling.hasAttribute('inert'), 'button sibling (slot) inert');
+        assert.isFalse(container.children[0].hasAttribute('inert'), '1st child inert restored');
+        assert.isFalse(container.children[1].hasAttribute('inert'), '2nd child inert restored');
+        assert.isFalse(container.children[2].hasAttribute('inert'), '3rd child inert restored');
       });
 
     });
