no import, use script

--- a/demo/nytimes.html
+++ b/demo/nytimes.html
@@ -16,8 +16,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../blocking-elements.html">
+  <script src="../blocking-elements.js"></script>
 
   <style>
     .container {
