--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
-  <link rel="import" href="../blocking-elements.html">
+  <script src="../blocking-elements.js"></script>
 
   <style>
     .container {
