--- a/test/basic.html
+++ b/test/basic.html
@@ -78,48 +78,46 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       test('push() adds an element to the stack, remove() removes it', function() {
         const child = container.children[0];
-        assert.equal(document.$blockingElements.all.length, 0);
+        assert.equal(document.$blockingElements.top, null);
         document.$blockingElements.push(child);
-        assert.equal(document.$blockingElements.all.length, 1);
         assert.equal(document.$blockingElements.top, child);
 
         document.$blockingElements.remove(child);
-        assert.equal(document.$blockingElements.all.length, 0);
+        assert.equal(document.$blockingElements.top, null);
       });
 
       test('pop() removes the top blocking element from stack and returns it', function() {
         document.$blockingElements.push(container.children[0]);
         document.$blockingElements.push(container.children[1]);
-        assert.equal(document.$blockingElements.all.length, 2);
+        assert.isTrue(document.$blockingElements.has(container.children[0]), '1st child is a blocking element');
         assert.equal(document.$blockingElements.top, container.children[1], '2nd child is top blocking element');
         assert.equal(document.$blockingElements.pop(), container.children[1], '2nd child removed');
-        assert.equal(document.$blockingElements.all.length, 1);
+        assert.equal(document.$blockingElements.top, container.children[0], '1sd child is top blocking element');
       });
 
       test('preserve already inert elements', function() {
-        assert.equal(document.$blockingElements.all.length, 0);
+        assert.equal(document.$blockingElements.top, null);
         const child = container.children[0];
         // Make children[1] inert
         container.children[1].setAttribute('inert', '');
         // Push and remove children[0], see if inert is preserved.
         document.$blockingElements.push(child);
-        assert.equal(document.$blockingElements.all.length, 1);
+        assert.equal(document.$blockingElements.top, child);
         document.$blockingElements.remove(child);
-        assert.equal(document.$blockingElements.all.length, 0);
+        assert.equal(document.$blockingElements.top, null);
         assert.isTrue(container.children[1].hasAttribute('inert'), 'inert preserved');
       });
 
       test('multiple push() update elements inertness', function() {
         document.$blockingElements.push(container.children[0]);
-        assert.equal(document.$blockingElements.all.length, 1);
         assert.equal(document.$blockingElements.top, container.children[0]);
         assert.isFalse(container.children[0].hasAttribute('inert'), '1st child active');
         assert.isTrue(container.children[1].hasAttribute('inert'), '2nd child inert');
         assert.isTrue(container.children[2].hasAttribute('inert'), '3rd child inert');
 
         document.$blockingElements.push(container.children[1]);
-        assert.equal(document.$blockingElements.all.length, 2);
-        assert.equal(document.$blockingElements.top, container.children[1]);
+        assert.isTrue(document.$blockingElements.has(container.children[0]), '1st child is a blocking element');
+        assert.equal(document.$blockingElements.top, container.children[1], '2nd child is top blocking element');
         assert.isTrue(container.children[0].hasAttribute('inert'), '1st child inert');
         assert.isFalse(container.children[1].hasAttribute('inert'), '2nd child active');
         assert.isTrue(container.children[2].hasAttribute('inert'), '3rd child inert');
@@ -140,9 +138,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       });
 
       test('push() keeps parent tree active', function() {
-        assert.equal(document.$blockingElements.all.length, 0);
+        assert.equal(document.$blockingElements.top, null);
         document.$blockingElements.push(inner.children[0]);
-        assert.equal(document.$blockingElements.all.length, 1);
         assert.equal(document.$blockingElements.top, inner.children[0]);
 
         // node and its parents should be active
