--- a/test/shadow.html
+++ b/test/shadow.html
@@ -82,20 +82,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         // Distributed element as a blocking element.
         document.$blockingElements.push(container.children[0]);
         assert.equal(document.$blockingElements.top, container.children[0]);
-        assert.isTrue(shadowBtn.hasAttribute('inert'), 'button in shadow dom inert');
-        assert.isFalse(container.children[0].hasAttribute('inert'), '1st child active');
-        assert.isTrue(container.children[1].hasAttribute('inert'), '2nd child inert');
-        assert.isTrue(container.children[2].hasAttribute('inert'), '3rd child inert');
+        assert.isTrue(shadowBtn.inert, 'button in shadow dom inert');
+        assert.isNotOk(container.children[0].inert, '1st child active');
+        assert.isTrue(container.children[1].inert, '2nd child inert');
+        assert.isTrue(container.children[2].inert, '3rd child inert');
 
         // Button in shadow dom as a blocking element, its siblings should be inert
         document.$blockingElements.push(shadowBtn);
         assert.isTrue(document.$blockingElements.has(container.children[0]), '1st child is a blocking element');
         assert.equal(document.$blockingElements.top, shadowBtn);
-        assert.isFalse(shadowBtn.hasAttribute('inert'), 'button in shadow dom active');
-        assert.isTrue(shadowBtn.nextElementSibling.hasAttribute('inert'), 'button sibling (slot) inert');
-        assert.isFalse(container.children[0].hasAttribute('inert'), '1st child inert restored');
-        assert.isFalse(container.children[1].hasAttribute('inert'), '2nd child inert restored');
-        assert.isFalse(container.children[2].hasAttribute('inert'), '3rd child inert restored');
+        assert.isNotOk(shadowBtn.inert, 'button in shadow dom active');
+        assert.isTrue(shadowBtn.nextElementSibling.inert, 'button sibling (slot) inert');
+        assert.isNotOk(container.children[0].inert, '1st child inert restored');
+        assert.isNotOk(container.children[1].inert, '2nd child inert restored');
+        assert.isNotOk(container.children[2].inert, '3rd child inert restored');
       });
 
     });
@@ -129,20 +129,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         // Distributed element as a blocking element.
         document.$blockingElements.push(container.children[0]);
         assert.equal(document.$blockingElements.top, container.children[0]);
-        assert.isTrue(shadowBtn.hasAttribute('inert'), 'button in shadow dom inert');
-        assert.isFalse(container.children[0].hasAttribute('inert'), '1st child active');
-        assert.isTrue(container.children[1].hasAttribute('inert'), '2nd child inert');
-        assert.isTrue(container.children[2].hasAttribute('inert'), '3rd child inert');
+        assert.isTrue(shadowBtn.inert, 'button in shadow dom inert');
+        assert.isNotOk(container.children[0].inert, '1st child active');
+        assert.isTrue(container.children[1].inert, '2nd child inert');
+        assert.isTrue(container.children[2].inert, '3rd child inert');
 
         // Button in shadow dom as a blocking element, its siblings should be inert
         document.$blockingElements.push(shadowBtn);
         assert.isTrue(document.$blockingElements.has(container.children[0]), '1st child is a blocking element');
         assert.equal(document.$blockingElements.top, shadowBtn);
-        assert.isFalse(shadowBtn.hasAttribute('inert'), 'button in shadow dom active');
-        assert.isTrue(shadowBtn.nextElementSibling.hasAttribute('inert'), 'button sibling (slot) inert');
-        assert.isFalse(container.children[0].hasAttribute('inert'), '1st child inert restored');
-        assert.isFalse(container.children[1].hasAttribute('inert'), '2nd child inert restored');
-        assert.isFalse(container.children[2].hasAttribute('inert'), '3rd child inert restored');
+        assert.isNotOk(shadowBtn.inert, 'button in shadow dom active');
+        assert.isTrue(shadowBtn.nextElementSibling.inert, 'button sibling (slot) inert');
+        assert.isNotOk(container.children[0].inert, '1st child inert restored');
+        assert.isNotOk(container.children[1].inert, '2nd child inert restored');
+        assert.isNotOk(container.children[2].inert, '3rd child inert restored');
       });
 
     });
