content and slot inertable. Check if swapped siblings are the same element.

--- a/demo/ce.html
+++ b/demo/ce.html
@@ -62,6 +62,12 @@ limitations under the License.
     <input placeholder="in body">
     <x-trap-focus id="nested-inner">
       <input placeholder="in body">
+      <x-trap-focus id="nested-inner-inner">
+        <input placeholder="in body">
+      </x-trap-focus>
+    </x-trap-focus>
+    <x-trap-focus id="nested-inner2">
+      <input placeholder="in body">
     </x-trap-focus>
   </x-trap-focus>
 
