update DOM in a RAF. Add flush method to force update.

--- a/test/basic.html
+++ b/test/basic.html
@@ -110,12 +110,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       test('multiple push() update elements inertness', function() {
         document.$blockingElements.push(container.children[0]);
+        document.$blockingElements.flush();
         assert.equal(document.$blockingElements.top, container.children[0]);
         assert.isNotOk(container.children[0].inert, '1st child active');
         assert.isTrue(container.children[1].inert, '2nd child inert');
         assert.isTrue(container.children[2].inert, '3rd child inert');
 
         document.$blockingElements.push(container.children[1]);
+        document.$blockingElements.flush();
         assert.isTrue(document.$blockingElements.has(container.children[0]), '1st child is a blocking element');
         assert.equal(document.$blockingElements.top, container.children[1], '2nd child is top blocking element');
         assert.isTrue(container.children[0].inert, '1st child inert');
@@ -166,6 +168,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       test('push() keeps parent tree active', function() {
         assert.equal(document.$blockingElements.top, null);
         document.$blockingElements.push(inner.children[0]);
+        document.$blockingElements.flush();
         assert.equal(document.$blockingElements.top, inner.children[0]);
 
         // node and its parents should be active
