--- a/test/shadow.html
+++ b/test/shadow.html
@@ -81,6 +81,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // Distributed element as a blocking element.
         document.$blockingElements.push(container.children[0]);
+        document.$blockingElements.flush();
         assert.equal(document.$blockingElements.top, container.children[0]);
         assert.isTrue(shadowBtn.inert, 'button in shadow dom inert');
         assert.isNotOk(container.children[0].inert, '1st child active');
@@ -89,6 +90,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // Button in shadow dom as a blocking element, its siblings should be inert
         document.$blockingElements.push(shadowBtn);
+        document.$blockingElements.flush();
         assert.isTrue(document.$blockingElements.has(container.children[0]), '1st child is a blocking element');
         assert.equal(document.$blockingElements.top, shadowBtn);
         assert.isNotOk(shadowBtn.inert, 'button in shadow dom active');
@@ -128,6 +130,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // Distributed element as a blocking element.
         document.$blockingElements.push(container.children[0]);
+        document.$blockingElements.flush();
         assert.equal(document.$blockingElements.top, container.children[0]);
         assert.isTrue(shadowBtn.inert, 'button in shadow dom inert');
         assert.isNotOk(container.children[0].inert, '1st child active');
@@ -136,6 +139,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         // Button in shadow dom as a blocking element, its siblings should be inert
         document.$blockingElements.push(shadowBtn);
+        document.$blockingElements.flush();
         assert.isTrue(document.$blockingElements.has(container.children[0]), '1st child is a blocking element');
         assert.equal(document.$blockingElements.top, shadowBtn);
         assert.isNotOk(shadowBtn.inert, 'button in shadow dom active');
