update bower deps

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
-  <script src="../../inert/inert.js"></script>
+  <script src="../../inert/dist/inert.js"></script>
   <script src="../blocking-elements.js"></script>
 
   <style>
