--- a/demo/ce.html
+++ b/demo/ce.html
@@ -16,9 +16,9 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <script src="../../inert/inert.js"></script>
-  <link rel="import" href="../blocking-elements.html">
+  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../../inert/dist/inert.js"></script>
+  <script src="../blocking-elements.js"></script>
 
   <script>
     // Dynamic import according to query param ce=v0|v1.
