--- a/test/shadow.html
+++ b/test/shadow.html
@@ -19,10 +19,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../web-component-tester/browser.js"></script>
-  <script src="../../test-fixture/test-fixture-mocha.js"></script>
 
-  <link rel="import" href="../../test-fixture/test-fixture.html">
-  <link rel="import" href="../blocking-elements.html">
+  <script src="../blocking-elements.js"></script>
 
 </head>
 
@@ -108,7 +106,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       let container;
 
-      setup(function() {
+      setup(function(done) {
         container = fixture('basic');
         const template = document.querySelector('template#shadow-v1');
 
@@ -117,6 +115,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         container.attachShadow({
           mode: 'open'
         }).appendChild(clone);
+        // Needed by ShadowDOM polyfill.
+        setTimeout(function(){ done(); });
       });
 
       teardown(function() {
