--- a/test/basic.html
+++ b/test/basic.html
@@ -100,6 +100,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         assert.equal(document.$blockingElements.top, null);
         assert.throws(function() {
           document.$blockingElements.push(document.createElement('div'));
+          document.$blockingElements.flush();
         }, 'Non-connected element cannot be a blocking element');
         assert.equal(document.$blockingElements.top, null, 'element is not a blocking element');
       });
