--- a/test/basic.html
+++ b/test/basic.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../web-component-tester/browser.js"></script>
 
-  <script src="../blocking-elements.js"></script>
+  <script src="../dist/blocking-elements.js"></script>
 
 </head>
 
