use dist/ in demos

--- a/demo/ce.html
+++ b/demo/ce.html
@@ -18,7 +18,7 @@ limitations under the License.
   <title>blockingElements polyfill test page</title>
   <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
   <script src="../../inert/dist/inert.js"></script>
-  <script src="../blocking-elements.js"></script>
+  <script src="../dist/blocking-elements.js"></script>
 
   <script>
     // Dynamic import according to query param ce=v0|v1.
