--- a/demo/nytimes.html
+++ b/demo/nytimes.html
@@ -17,7 +17,7 @@ limitations under the License.
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
   <script src="../../inert/dist/inert.js"></script>
-  <script src="../blocking-elements.js"></script>
+  <script src="../dist/blocking-elements.js"></script>
 
   <style>
     .container {
