--- a/demo/ce.html
+++ b/demo/ce.html
@@ -16,8 +16,8 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../../wicg-inert/dist/inert.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../node_modules/wicg-inert/dist/inert.js"></script>
   <script src="../dist/blocking-elements.js"></script>
 
   <script>
