--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><!--
+<!doctype html>
+<!--
 @license
 Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
 This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
@@ -6,20 +7,67 @@ The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
 The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
---><html><head>
+-->
+<html>
 
-    <meta charset="utf-8">
-    <title>Tests</title>
-    <script src="../../web-component-tester/browser.js"></script>
+<head>
+  <meta charset="utf-8">
+  <title>Tests</title>
+  <link href="../node_modules/mocha/mocha.css" rel="stylesheet" />
+  <script src="../node_modules/mocha/mocha.js"></script>
+  <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="helpers/fixture.js"></script>
+</head>
 
-  </head>
-  <body>
+<body>
 
-    <script>
-      WCT.loadSuites([
-        'basic.html',
-        'shadow.html'
-      ]);
-    </script>
+  <!-- A container element for the visual Mocha results -->
+  <div id="mocha"></div>
 
-</body></html>
+  <!-- Mocha setup and initiation code -->
+  <script>
+    mocha.setup('bdd');
+    window.onload = function() {
+      var runner = mocha.run();
+      var failedTests = [];
+
+      runner.on('end', function() {
+        window.mochaResults = runner.stats;
+        window.mochaResults.reports = failedTests;
+      });
+
+      runner.on('fail', logFailure);
+
+      function logFailure(test, err){
+        var flattenTitles = function(test){
+          var titles = [];
+          while (test.parent.title){
+            titles.push(test.parent.title);
+            test = test.parent;
+          }
+          return titles.reverse();
+        };
+
+        failedTests.push({
+          name: test.title,
+          result: false,
+          message: err.message,
+          stack: err.stack,
+          titles: flattenTitles(test)
+        });
+      };
+    };
+    mocha.checkLeaks(); // Check for global variable leaks
+  </script>
+
+  <!-- The script under test -->
+  <script src="../dist/blocking-elements.js"></script>
+
+  <!-- Tests -->
+  <script src="basic.js"></script>
+  <script src="shadow.js"></script>
+
+</body>
+
+</html>
