include Set polyfill, add safari 9 and ie11

--- a/demo/ce.html
+++ b/demo/ce.html
@@ -16,9 +16,10 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
+  <script src="../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script src="../node_modules/wicg-inert/dist/inert.js"></script>
-  <script src="../dist/blocking-elements.js"></script>
+  <!-- blocking-elements polyfill imported by x-trap-focus.html -->
 
   <script>
     // Dynamic import according to query param ce=v0|v1.
