--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link href="../node_modules/mocha/mocha.css" rel="stylesheet" />
   <script src="../node_modules/mocha/mocha.js"></script>
   <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="helpers/fixture.js"></script>
 </head>
