--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
+  <script src="../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
   <script src="../node_modules/wicg-inert/dist/inert.js"></script>
   <script src="../dist/blocking-elements.js"></script>
 
