--- a/demo/index.html
+++ b/demo/index.html
@@ -87,10 +87,8 @@ limitations under the License.
     Check these other demos:
     <ul>
       <li><a href="nytimes.html">lots of content</a></li>
-      <li><a href="ce.html?ce=v0">with Custom Elements (ShadowDom v0)</a></li>
-      <li><a href="ce.html?ce=v1">with Custom Elements (ShadowDom v1)</a></li>
+      <li><a href="ce.html">with Custom Elements</a></li>
     </ul>
-
   </p>
 
   <script>
